style one line